Refactored the Book class renamed to AdminBook.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
 
+spring.jpa.show-sql = true
+
+server.servlet.context-path=/library
+
 security.oauth2.client.client-id=${CLIENT_ID:library}
 security.oauth2.client.client-secret=${CLIENT_SECRET:library123}
 
