--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
 
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 
 server.servlet.context-path=/library
 
